---
source: compiler-core/src/erlang/tests/records.rs
assertion_line: 144
expression: "\npub record Person {\n    Teacher(name: Nil, age: Int)\n    Student(name: String, age: Int)\n}\npub fn get_age(person: Person) { person.age }"
---
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([get_age/1]).
-export_type([person/0]).

-type person() :: {teacher, nil, integer()} | {student, binary(), integer()}.

-file("/root/project/test/my/mod.rakun", 6).
-spec get_age(person()) -> integer().
get_age(Person) ->
    erlang:element(3, Person).
